[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.12"

[[bin]]
name = "day1"
path = "day1/main.rs"

[[bin]]
name = "day2"
path = "day2/main.rs"

[[bin]]
name = "day3"
path = "day3/main.rs"

[[bin]]
name = "day4"
path = "day4/main.rs"

[[bin]]
name = "day5"
path = "day5/main.rs"

[[bin]]
name = "day6"
path = "day6/main.rs"

[[bin]]
name = "day7"
path = "day7/main.rs"

[[bin]]
name = "day8"
path = "day8/main.rs"

[[bin]]
name = "day9"
path = "day9/main.rs"

[[bin]]
name = "day10"
path = "day10/main.rs"
